<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/topic_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/main_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/topic_one"
        android:textColor="@color/colorPrimary" />

    <RadioGroup
        android:id="@+id/main_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/main_rb_a"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/common_yes"
            android:textColor="@color/color_333333" />

        <RadioButton
            android:id="@+id/main_rb_b"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/common_no"
            android:textColor="@color/color_333333" />

        <RadioButton
            android:id="@+id/main_rb_c"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            android:background="@drawable/radio_button_background"
            android:button="@null"
            android:gravity="center"
            android:text="@string/common_all"
            android:textColor="@color/color_333333" />

    </RadioGroup>
</LinearLayout>
