<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.xy.jepackdemo.ui.bond.newbond.NewBondFragment" />
    </data>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bond_name"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bond_level"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bond_status"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bond_change_price"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/item_lucky_draw_rt"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/bond_lucky"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_bond_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_FFFFFF" />
        </LinearLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</layout>