<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="bean"
            type="com.xy.jepackdemo.bean.FilterBondBean.RowsBean.CellBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/item_bond_type"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:background="@drawable/table_item_type_bg"
                android:gravity="center"
                android:text="@{bean.type}"
                android:textColor="@color/colorPrimary"
                android:textSize="9sp"
                tools:text="攻" />

            <TextView
                android:id="@+id/item_bond_name"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{bean.bond_nm}"
                android:textColor="@color/color_333333"
                android:textSize="13sp"
                tools:text="@string/bond_name" />

            <TextView
                android:id="@+id/item_bond_price"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{bean.full_price}"
                android:textColor="@color/color_333333"
                android:textSize="13sp"
                tools:text="@string/bond_price" />

            <TextView
                android:id="@+id/item_bond_premium_rate"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{bean.premium_rt}"
                android:textColor="@color/color_333333"
                android:textSize="13sp"
                tools:text="@string/bond_premium_rate" />

            <TextView
                android:id="@+id/item_bond_level"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@{bean.rating_cd}"
                android:textColor="@color/color_333333"
                android:textSize="13sp"
                tools:text="@string/bond_level" />


            <TextView
                android:id="@+id/item_bond_yield_to_maturity"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{bean.ytm_rt_tax}"
                android:textColor="@color/color_333333"
                android:textSize="13sp"
                tools:text="@string/bond_yield_to_maturity" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/color_DFDFDF" />
    </LinearLayout>
</layout>