<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.xy.jepackdemo.ui.stock.harem.HaremViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/stock_name"
                        android:textColor="@color/color_333333"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/stock_pe"
                        android:textColor="@color/color_333333"
                        android:textSize="9sp" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/stock_pessimistic"
                        android:textColor="@color/color_333333"
                        android:textSize="12sp" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="12dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:background="@color/color_333333" />

                    <TextView
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/stock_neutral"
                        android:textColor="@color/color_333333"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/stock_N"
                        android:textColor="@color/color_333333"
                        android:textSize="11sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/stock_list"
                    android:background="@color/color_FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>

</layout>