<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.xy.jepackdemo.ui.fund.arbitrage.ArbitrageFundViewModel" />
    </data>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/fund_name"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fund_price"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fund_price"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/fund_nav"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/fund_discount"
                    android:textColor="@color/color_333333"
                    android:textSize="11sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/arbitrage_fund_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_FFFFFF" />
        </LinearLayout>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</layout>