<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.xy.jepackdemo.ui.stock.hkStock.HkStockViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:id="@+id/refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:minWidth="120dp"
                            android:text="@string/hk_company_name"
                            android:textColor="@color/color_333333"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/hk_only_money"
                            android:textColor="@color/color_333333"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/hk_getting"
                            android:textColor="@color/color_333333"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/hk_apply_date"
                            android:textColor="@color/color_333333"
                            android:textSize="10sp" />


                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/hk_first_raise"
                            android:textColor="@color/color_333333"
                            android:textSize="10sp" />


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@color/color_DFDFDF" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hk_stock_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/color_FFFFFF" />
            </LinearLayout>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>

</layout>