<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.xy.jepackdemo.ui.SettingActivity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--title-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_background"
                android:onClick="@{(thisView)->model.finish()}"
                android:padding="10dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/setting"
                android:textColor="@color/color_FFFFFF"
                android:textSize="16sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/version" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/setting_version"
                android:textColor="@color/color_333333"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/setting_version"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textColor="@color/color_333333"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/author" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/setting_author"
                android:textColor="@color/color_333333"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_copy"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:background="@color/color_333333"
                android:gravity="center"
                android:text="@string/copy"
                android:textColor="@color/color_FFFFFF"
                android:textSize="13sp" />
        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/setting_add"
                android:textColor="@color/color_333333"
                android:textSize="13sp" />

        </LinearLayout>-->

        <!--<ImageView
            android:layout_width="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="400dp"
            android:src="@drawable/qrcode" />-->

    </LinearLayout>
</layout>